[project]
name = "langgraph-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "community>=1.0.0b1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
    "yfinance>=1.2.0",
]
